--- a/160parm_Time_series_results_James.Rmd
+++ b/160parm_Time_series_results_James.Rmd
@@ -23,6 +23,7 @@ params:
 
 #
 # This file is designed to be run using '160parm_run_markdown.R'  
+# The scripts in that file renders 3 result html file: 19\60a, b and c (different variable sets and data)  
 #
 
 ```
@@ -39,25 +40,24 @@ params:
 * Predictors:
     - slope_dep_vs_time: Trend in Tot-N deposition 1992-2016    
     - NO3, TOTN_dep: Medians of NO3, TOTN_dep (Tot-N deposition) 1992-2016   
-    - TOC: Medians of TOC 1992-2016 (section 5 and 6 only)     
-    - catchment_area (section 5 only)   
+    - catchment_area (if included in data)      
+    - TOC: Medians of TOC 1992-2016 (if included in data)     
     - pre, tmp: mean precipitation + temp   
-    - Land cover   
+    - Land cover 
+  
+Technical details: This html file was created was 
 
 ## 1. Libraries  
 ```{r, results='hide', message=FALSE, warning=FALSE}
 
 # All of these packages cn be loaded at once using library(tidyverse). (I just like to be specific.)
 library(dplyr)
-library(tidyr)
-library(purrr)
-library(lubridate)
+library(tidyr)      # pivot_wider
+library(purrr)      # 'map' functions  
+library(lubridate)  
 library(ggplot2)
 
 # Too many packages, not all are used
-# library(forcats)
-# library(mgcv)
-# library(nlme)
 library(mapview)
 library(visreg)     # visreg
 library(rkt)        # Theil -Sen Regression
@@ -65,60 +65,26 @@ library(rkt)        # Theil -Sen Regression
 library(MuMIn)      
 
 # Trees and forests
-# install.packages("party")
-# install.packages("modeltools")
-# install.packages("coin")
-# install.packages("multcomp")
-# install.packages("TH.data")
-library(party)
-# install.packages("evtree")
-library(evtree)
-# install.packages("randomForest")
+library(party)                  # ctree
+library(evtree)                 # evtree
 library(randomForest)
-library(randomForestExplainer)
-library(pdp)
+library(randomForestExplainer)  # measure_importance, plot_multi_way_importance
+library(pdp)                    # partial, autoplot
 
 library(maps)
 my_map <- map_data("world")
 
 library(effects)    # handles lme models  
 library(readxl)
+library(readr)
 
-knitr::opts_chunk$set(results = 'hold')
-knitr::opts_chunk$set(warning = FALSE)
-
-```
-
-```{r}
-
-# run_randomForestExplainer <- TRUE
-run_randomForestExplainer <- FALSE
+knitr::opts_chunk$set(results = 'hold') # collect the results from a chunk  
+knitr::opts_chunk$set(warning = FALSE)  
 
 ```
-
 
 
 ## 2. Data
-```{r}
-
-dat_annual_sel <- readRDS("Data/120_dat_annual_sel.rds")
-# ts_model_list <- readRDS("Data/120_ts_model_list_linear.rds")
-# ts_model_list_wout_TOC <- readRDS("Data/120_ts_model_list_wout_TOC.rds")
-
-df_stations <- readRDS("Data/100_Stations.rds")
-df_deposition <- readRDS("Data/100_Deposition.rds")
-df_climate <- readRDS("Data/100_Climate.rds")
-
-```
-
-### Station metadata
-```{r}
-
-df_station <- read_excel(
-  "K:/Prosjekter/langtransporterte forurensninger/O-23300 - ICP-WATERS - HWI/Faglige rapporter/2020 report/Land cover/ICPW_All_Stations_2020_2020_05_04.xlsx") %>%
-  mutate(station_id = as.character(station_id))
-
-```
 
 ### James' trends and medians     
 ```{r}
@@ -238,64 +204,6 @@ cat("dat, n =", nrow(dat), "\n")
 
 ```
 
-```{r, echo = FALSE}
-
-# ### Deposition OLD    
-# * Data from K or github 
-# * calculate regression (Theil-Senslope 1992-2016)  
-# * calculate medians (2012-2016)
-
-if (FALSE){
-  
-  ### version 1: Get deposition (annual) from K     
-  # df_deposition <- readRDS("Data/100_Deposition.rds") %>%
-  #   as.data.frame()
-  
-  ### version 2: Get deposition (annual) from github     
-  fn <- "https://github.com/JamesSample/icpw2/raw/master/deposition_data/csv/icpw_totn_dep_1990-2016_all_stns.csv"
-  df_deposition <- read.csv(fn) %>%
-    tidyr::pivot_longer(-station_id,
-                        names_to = "year", names_prefix = "X", names_transform = list(year = as.numeric),
-                        values_to = "TOTN_dep")
-  
-  cat("n =", nrow(df_deposition), "\n")
-  cat("range =", range(df_deposition$year), "\n")
-  
-  df_deposition <- df_deposition %>%
-    filter(year %in% 1992:2016)
-  
-  cat("\nNumber of years per station: \n")
-  df_deposition %>%
-    count(station_id) %>%
-    xtabs(~n, .)  
-  cat("\n")
-  
-  # test Senslope function
-  # df_test <- df_deposition %>% filter(station_id == 38115)
-  # result <- rkt(df_test$year, df_test$TOTN_dep)
-  # data.frame(station_id = 38115, TOTN_dep_P = result$sl, TOTN_dep_slope = result$B)
-  
-  # Function for Sen slope
-  get_senslope <- function(data){
-    result <- rkt(data$year, data$TOTN_dep)
-    data.frame(station_id = data$station_id[1], slope_dep_vs_time = result$B, p_dep_vs_time = result$sl)
-  }
-  
-  df_deposition_slope <- df_deposition %>%
-    split(.$station_id) %>% # str()
-    purrr::map_dfr(get_senslope)  
-  cat("Slope: n =", nrow(df_deposition_slope), "\n")
-  
-  
-  df_deposition_median <- df_deposition %>%
-    filter(year %in% 2012:2016) %>%
-    group_by(station_id) %>%
-    summarise(TOTN_dep = median(TOTN_dep))  
-  cat("Median: n =", nrow(df_deposition_median), "\n")
-  
-}
-
-```
 ### Deposition trends and median 1992-2006     
 ```{r}
 
@@ -346,16 +254,15 @@ names(dat)
 
 ```
 
-### Add climate and deposition means 
+### Add climate and deposition medians 
 ```{r}
 
-df_climate <- readRDS("Data/100_Climate.rds") %>%
-  filter(year %in% 1992:2006)
+fn <- "https://github.com/JamesSample/icpw2/raw/master/thematic_report_2020/results/climate/cru_climate_trends_icpw_stns.csv"
+df_climate_mean <- read_csv(fn) %>%
+  select(station_id, variable, median) %>%
+  pivot_wider(names_from = "variable", values_from = "median")
 
-df_climate_mean <- df_climate %>%
-  group_by(station_id, variable) %>% 
-  summarise(mean = mean(value), .groups = "drop") %>%
-  tidyr::pivot_wider(names_from = "variable", values_from = "mean")
+# names(df_climate_mean)
 
 # Add
 dat <- dat %>%
